<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <TextView
        android:id="@+id/detailsTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_margin"
        android:textSize="@dimen/app_title_text_size"
        android:textStyle="bold"
        android:text="@string/details_title_text" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_margin"
        android:hint="@string/enter_tv_show_title_hint"/>

    <EditText
        android:id="@+id/genreEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/input_margin"
        android:hint="@string/enter_tv_show_genre_hint"/>

    <EditText
        android:id="@+id/ratingEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_tv_show_rating_hint"
        android:layout_marginBottom="@dimen/input_margin"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/input_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/button_spacing_margin"
            android:backgroundTint="@color/save_button_color"
            android:text="@string/save_button_text" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/button_spacing_margin"
            android:layout_marginEnd="@dimen/button_spacing_margin"
            android:backgroundTint="@color/delete_button_color"
            android:text="@string/delete_button_text" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/button_spacing_margin"
            android:backgroundTint="@color/cancel_button_color"
            android:text="@string/cancel_button_text"
            android:textColor="@color/dark_text_color" />
    </LinearLayout>
</LinearLayout>