<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:text="@string/title_text" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/genre_text_size"
        android:textColor="@color/genre_text_color"
        android:text="@string/genre" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/rating_text_size"
        android:text="@string/rating" />

    <!--        <View-->
    <!--            android:id="@+id/divider"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="1dp"-->
    <!--            android:background="?android:attr/listDivider" />-->
</LinearLayout>